vendor/vendor/github.com/richardlehane/webarchive/examples/jhove/invalid/invalid-warcheaderfieldpolicy-5.warc
WARC/1.0
WARC-Type: warcinfo
WARC-Date: 2008-04-30T20:48:25Z
WARC-Filename: IAH-20080430204825-00000-blackbook.warc.gz
WARC-Record-ID: <urn:uuid:35f02b38-eb19-4f0d-86e4-bfe95815069c>
Content-Length: 483

